tests/core/snapshots/graphql-conformance-013.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema
@server(hostname: "0.0.0.0", port: 8001, queryValidation: false)
@upstream(httpCache: 42)
@link(src: "schema_0.graphql", type: Config) {
  query: Query
}

type Query {
  me: User! @graphQL(url: "http://upstream/graphql", name: "me")
}

type User {
  birthday: Date
  id: String
  name: String
}
