tests/core/snapshots/graphql-conformance-018.md_0.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "user": {
        "city": "Globe",
        "newName": "Gqlforge"
      }
    }
  }
}
